[package]
name = "sm_room2room"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum_macros = "0.24"
websocket = "0.26"
csv = "1"
time = "0.3"
