[package]
name = "sm_room2room"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum_macros = "0.24"
csv = "1"
time = "0.3"
clearscreen = "2.0.0"
env_logger = "0.10.0"
log = "0.4.17"
rusb2snes = "0.1.3"
tungstenite = "0.19.0"
